--- a/Call_Center_Cleanup-Copy1.ipynb
+++ b/Call_Center_Cleanup-Copy1.ipynb
@@ -2486,11 +2486,7 @@
     "#Your Code Here:\n",
     "\n",
     "merged_df=pd.merge(north_plt,service_level,on='Rep ID').drop(\"Calls_x\",axis=1).drop(\"Calls_y\",axis=1)\n",
-    "merged_df.plot.barh(x='Rep ID', stacked=False)\n",
-    "# service_level.plot(kind='bar', title='Average Speed of Answer', ylabel='Percentage / Seconds',\n",
-    "#          xlabel='Rep ID', figsize=(10, 6))\n",
-    "\n",
-    "# plt.show()\n"
+    "merged_df.plot.barh(x='Rep ID', stacked=False)\n"
    ]
   },
   {
